# wart-servers

./: README.md
examples/: .gitignore  README.md  a.cpp  build.sh  clean.sh  client.py  wacc
examples/rpc_client/: __init__.py  wart_storage_pb2.py  wart_storage_pb2_grpc.py  wart_types_pb2.py  wart_worker_pb2.py  wart_worker_pb2_grpc.py
interface/: .gitignore  build.sh  clean.sh
interface/protobuf/: wart-storage.proto  wart-types.proto  wart-worker.proto
interface/wasm/: imports.wit
wart-worker/: Cargo.toml  build.rs  config.yaml
wart-worker/src/: client.rs  server.rs
wart-worker/src/backend/: mod.rs  redis.rs  storage.rs
wart-worker/src/bindgen/: mod.rs  proto.rs  wasm.rs
wart-worker/src/log_tracer/: mod.rs
wart-worker/src/rpc_server/: mod.rs  router.rs
wart-worker/src/rpc_server/services/: mod.rs
wart-worker/src/rpc_server/services/close_session/: mod.rs
wart-worker/src/rpc_server/services/increment_epoch/: mod.rs
wart-worker/src/rpc_server/services/open_session/: mod.rs
wart-worker/src/rpc_server/services/streaming_run/: mod.rs
wart-worker/src/rpc_server/services/update_store/: mod.rs
wart-worker/src/wasm/: atomic_kv.rs  mod.rs  query.rs  sandbox.rs  utils.rs
wasm/: .gitignore  Makefile  build.sh  clean.sh  imports.c  imports.h  wacc
wasm/capi/: imports.c  imports.h
wasm/include/: conv.hpp  format.hpp  imports.hpp  log.hpp  log_abort.hpp  option.hpp  resources.hpp  types.hpp  utils.hpp  view.hpp
